--- a/tex/methods.tex
+++ b/tex/methods.tex
@@ -20,4 +20,4 @@ Since for the chosen prior $a=b=1 \ll N$ this simplifies to
 $$
 \mathrm{var}(\theta | \mathcal{D}) = \frac{\hat{\theta}(1-\hat{\theta})}{N}
 $$
-yielding the error estimate given by the associated standard deviation.
+yielding the error estimate given by the associated standard deviation. In all simulations we use $N~=~10000$ so that the maximum error for $\hat{\theta}~=~0.5$ is $\sigma~=~\sqrt{\mathrm{var}(\theta | \mathcal{D})} \approx 0.005$.
