--- a/paper.tex
+++ b/paper.tex
@@ -29,7 +29,7 @@ $*$to whom correspondence should be addressed: aviv@einstein.yu.edu}
 
 \date{\today}
 
-\input{tex/abstract-cited}
+\input{tex/abstract}
 
 \maketitle
 
@@ -54,7 +54,7 @@ $*$to whom correspondence should be addressed: aviv@einstein.yu.edu}
 \section{Acknowlegements}
 \input{tex/acknowledgements}
 
-\bibliographystyle{unsrtnat}
+\bibliographystyle{Science}
 \bibliography{bib/books,bib/papers}
 
 \onecolumngrid
