--- a/header.tex
+++ b/header.tex
@@ -135,6 +135,8 @@ urlcolor=[rgb]{.09 .29 .54}}
         \renewcommand{\thetable}{S\arabic{table}}%
         \setcounter{figure}{0}
         \renewcommand{\thefigure}{S\arabic{figure}}%
+        \setcounter{equation}{0}
+        \renewcommand{\theequation}{S\arabic{equation}}%
      }
 
 \def\tr{\mathrm{tr}}
@@ -152,4 +154,5 @@ urlcolor=[rgb]{.09 .29 .54}}
 \def\reffigrobusthierarchy{\ref{fig:combined}B}
 \def\reffigconnectcycle3D3x3{\ref{fig:combined}C}
 \def\reffigconnectdist3D3x3{\ref{fig:combined}D}
+\def\refsupp{Supplementary Material}
 %% END MACROS SECTION
