reduce number of references

--- a/paper.tex
+++ b/paper.tex
@@ -79,9 +79,10 @@ $*$to whom correspondence should be addressed: aviv@einstein.yu.edu}
 
 \beginsupplement
 \setcounter{secnumdepth}{4}
-\section{\refsupp{}}
 
-\begin{bibunit}[Science]
+\begin{bibunit}[unsrtnat]
+
+\section{\refsupp{}}
 
 \input{tex/results}
 \input{tex/methods}
@@ -89,9 +90,10 @@ $*$to whom correspondence should be addressed: aviv@einstein.yu.edu}
 \putbib[bib/books,bib/papers]
 
 \end{bibunit}
-\newpage
 
+\pagebreak
 \onecolumngrid
+\pagebreak
 
 \input{tex/figuressupp}
 \pagebreak
